fix: user window z-index

--- a/Frontend/src/components/Header.css
+++ b/Frontend/src/components/Header.css
@@ -94,6 +94,7 @@
   flex-direction: column;
   padding-top: 4rem;
   gap: 2rem;
+  z-index: 1;
 }
 
 .header__close-button{
